syntax = "proto3";
package book;

service BOOK_SERVICE {
    rpc getBookByID(GET_BOOK_BY_ID_REQUEST) returns (GET_BOOK_BY_ID_RESPONSE) {};
}

message GET_BOOK_BY_ID_REQUEST {
    string id = 1;
}

message Book { 
    string id = 1;
    string title = 2;
    string author = 3;
}

message GET_BOOK_BY_ID_RESPONSE {
    Book book = 1;
}